Sat Jul  8 22:37:14 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kdb_dbm.c (kdb5_kdbm_db_create): Make sure the dbm context is
		initialized before we start.

Fri Jul 7 16:29:22 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS, find com_err in TOPLIBD.


Fri Jun 30 14:39:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Add function dispatch table to context and use it to
		perform database accesses.  Add kdb5_db_set_dbops() to set
		a context's function dispatch table.
	* Makefile.in - Remove Berkeley database object modules from this
		library.  They're now in libkrb5 since we use them in
		other places.
	* t_kdb.c - Add ability to test both DBM and Berkeley database
		format.

Thu Jun 29 06:54:00 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in (--with-dbm): new option, allows easy building of
	normal dbm support for compatibility.
	* Makefile.in (DBFLAGS): variable to hold substitution of flags to
	enable Berkeley db support.

Thu Jun 22 11:59:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Replace static kdb context with context which is attached
		to krb5 context.  This allows for multiple open databases
		within the same process.


Thu Jun 15 18:04:58 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit copying of archive library to library
		directory.  Add dependency on all-$(WHAT)
	* configure.in - Create symlink for archive when we build it.

Wed Jun 14 12:37:51 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* configure.in: Check for umask being defined.

	* store_mkey.c (krb5_db_store_mkey): Use HAVE_UMASK instead of
	unix as a preprocessor define for setting the umask.  AIX doesn't
	define unix.

	* t_kdb.c (main): Declare option as int, not char.  When char is
	unsigned, the comparison to EOF fails and it loops forever.


Sun Jun 11 09:26:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean): Remove t_kdb and t_kdb.o

Fri Jun  9 19:26:49 1995    <tytso@rsx-11.mit.edu>
